--- a/3-centering-elements/material/index.html
+++ b/3-centering-elements/material/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<title>Box Model</title>
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+		<link href="https://cdn.jsdelivr.net/normalize/3.0.3/normalize.css" rel="stylesheet" type="text/css">
 		<style type="text/css">
 
 			#container
@@ -15,16 +16,20 @@
 				width: 200px;
 				height: 150px;
 				background-color: #81BBC9;
+				margin:0 auto;
 			}
 			h1{
 				font-family: Roboto;
+  			}
+  			h1 .myname{
+  				color: white;
   			}
 
 		</style>
 	</head>
 	<body>
 		<div id="container">
-			<div class="box"><h1>HOLA</h1></div>
+			<div class="box"><h1>HOLA <br><span class="myname">Niall</span>!</h1></div>
 		</div>
 	</body>
 </html>
